--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.2.5",
     "axios": "^0.24.0",
     "chart.js": "2.9.4",
+    "gh-pages": "^3.2.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "postcss": "8.2.8",
@@ -22,6 +23,8 @@
     "tailwindcss": "2.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
@@ -30,6 +33,7 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start",
     "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css"
   },
+  "homepage": "https://SebasProgrammer2021/onlineshop-safepet-back",
   "eslintConfig": {
     "extends": "react-app"
   },
