--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "deploy" : "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "test:cov": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject",
